--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "swagger-autogen": "^2.18.8",
+    "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
     "start": "nodemon app.js"
