--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
-    "start": "nodemon app.js",
-    "swagger-autogen": "node swagger.js"
+    "start": "nodemon src/app.js",
+    "swagger-autogen": "node src/swagger.js"
   }
 }
