--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "nodemon": "^2.0.15",
     "swagger-autogen": "^2.18.8",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "nodemon src/app.js",
