--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "swagger-autogen": "^2.18.8",
     "swagger-ui-express": "^4.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xlsx-populate": "^1.21.0"
   },
   "scripts": {
     "start": "nodemon src/app.js",
