--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "multer": "^1.4.4",
