--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "multer": "^1.4.4",
